--- a/views/dealer.ejs
+++ b/views/dealer.ejs
@@ -23,9 +23,10 @@
   </head>
   <body>
 	<div id="container">
-		<h2>Public table</h2>
-		<div id="table">
-				
+		<h2>Dealers view</h2>
+
+		<div id="drag-bar">
+			<div id="to-table"></div>
 		</div>
 	</div>
 
