we got creating a table done

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,7 @@
 	</script>
   </head>
   <body>
+<!-- REMEMBER post tablename to /table/create-->
 	<div id="container">
 		<h2>Public table</h2>
 		<div id="table">
@@ -34,5 +35,6 @@
 		$("#table").append(cards["2"]("club"));
 		$("#table").append(cards["2"]("club"));
 	</script>
+
   </body>
 </html>
