--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>deck.js</title>
     <link rel='stylesheet' href='/stylesheets/cards.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
   
-    <script type='text/javascript' src='javascripts/vendor/require.js'></script>
-    <script type='text/javascript' src='javascripts/config.js'></script>
+    <script type='text/javascript' src='/javascripts/vendor/require.js'></script>
+    <script type='text/javascript' src='/javascripts/config.js'></script>
     <script type='text/javascript'>
     requirejs.config({
-      baseUrl: 'javascripts'
+      baseUrl: '/javascripts'
     });
     require(['main']);
     </script>
