--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,25 @@
+/* Element */
+html, body {
+  height: 100%;
+  width: 100%;
+}
+body {
+  background-color: #e7e7e7;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  padding: 10px;
+}
+
+td {
+  padding: 10px;
+  border: 1px solid #999;
+}
+
+a {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .hidden {
   display: none;
 }
